2005-09-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): remove
	Slur/hammer hack

2005-09-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/instrument-notation.itely (Entering lyrics):
	Multiple latin-1->utf-8 conversion fix.

	* Documentation/user/*tely: Update Emacs cookie to utf-8.

2005-09-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-ps.scm (grob-cause): escape spaces in URLs.

2005-08-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/ly-module.cc (make_stand_in_procs_weak): backport: compat
	bugfix for GUILE 1.6.4.

2005-08-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (get_latex_textwidth): bugfix for splitext().

2005-08-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Include MY_PATCH_LEVEL in config.make's
	VERSION.

2005-08-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (get_latex_textwidth): remove unixisms

2005-08-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-markup-commands.scm (null): add  null markup.

2005-08-24  Graham Percival  <gpermus@gmail.com>

	* ly/bagpipe.ly: Backport.

	* Documentation/user/ {various}: backport doc updates,
	excluding stuff for new features in 2.7.

2005-08-16  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py (option_definitions): Don't localize
	the empty string. Fixes bug when --psfonts was used with
	non-English locale.

2005-08-15  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/advanced-notation.itely (Instrument names):
	Document a workaround for instrument names that collide with
	system start braces/brackets.

	* scm/framework-ps.scm (output-framework): Yet another
	backport-bugfix: remove the call to paper-book-write-midis, 
	which would otherwise require a more substantial backport. 

2005-08-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-ps.scm (output-framework): Backport-bugfix: use